LIST OF CHANGES for npg_ranger project

  - use request library to support proxy env variables for CLI client
  - switch to streaming for CLI client
  - upgrade mongodb to 2.2.22 from 2.2.21
  - upgrade js-md5 to 0.4.2 from 0.4.1
  - upgrade winston to 2.3.1 from 2.3.0
  - upgrade send to 0.14.2 from 0.14.1

release 1.2.0
  - remove directly logging to file due to winston bug
  - add flags to change logging level
  - all logging output is now sent to stderr
  - upgrade mongodb to 2.2.21 from 2.2.12
  - upgrade browserify to 13.3.0 from 13.1.1
  - upgrade moment to 2.17.1 from 2.17.0
  - upgrade pem to 1.9.4 from 1.9.2
  - upgrade fs-extra to 2.0.0 from 1.0.0

release 1.1.0
  - cwd before executing pipelines and cleaning after pipeline finishes
  - added more filters for /sample url
  - switch to htslib@1.3.2 with curl support and samtools@1.3.1-npg-Sep2016
    in Travis
  - remove forwarding protocol from proxy, use protocol only from conf
  - upgrade moment to 2.17.0 from 2.16.0
  - upgrade mongodb to 2.2.12 from 2.2.11
  - upgrade pem to 1.9.2 from 1.8.3
  - upgrade tmp to 0.0.31 from 0.0.30
  - do not allow query strings containing multiple attribute-value pairs
    for the same attribute
  - upgrade Freebayes to 1.1.0 from 1.0.2-npg-Aug2016 in TravisCI and docs
  - include docker configuration to deploy with containers

release 1.0.0
  - show error in log when controller tests fail to cleanup
  - bring back test for unknown server, keep external servers as pending tests
  - security option for server start (TLS)
  - /file url now serves files of all formats without processing

release 0.7.0
  - use npg_ranger server for roundtrip tests
  - add prototype for reference resolve
  - upgrade moment to 2.16.0 from 2.15.2
  - upgrade tmp to 0.0.30 from 0.0.29
  - upgrade fs-extra to 1.0.0 from ^0.30.0
  - upgrade winston to 2.3.0 from 2.2.0

release 0.6.0
  - example apache.conf in docs
  - badges in README.md
  - add cluster support